build_output_9.txt
[  1%] Building CXX object CMakeFiles/RawrEngine.dir/src/main.cpp.obj
In file included from D:\rawrxd\src\main.cpp:25:
D:\rawrxd\src\ide_window.h:3:9: warning: 'WIN32_LEAN_AND_MEAN' redefined
    3 | #define WIN32_LEAN_AND_MEAN
      |         ^~~~~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
[  2%] Building CXX object CMakeFiles/RawrEngine.dir/src/vsix_loader.cpp.obj
D:\rawrxd\src\vsix_loader.cpp:7: warning: ignoring '#pragma comment ' [-Wunknown-pragmas]
    7 | #pragma comment(lib, "shlwapi.lib")
[  3%] Building CXX object CMakeFiles/RawrEngine.dir/src/memory_core.cpp.obj
[  5%] Building CXX object CMakeFiles/RawrEngine.dir/src/hot_patcher.cpp.obj
[  6%] Building CXX object CMakeFiles/RawrEngine.dir/src/runtime_core.cpp.obj
[  7%] Building CXX object CMakeFiles/RawrEngine.dir/src/tool_registry.cpp.obj
[  9%] Building CXX object CMakeFiles/RawrEngine.dir/src/cpu_inference_engine_real.cpp.obj
In file included from D:\rawrxd\src\cpu_inference_engine_real.cpp:1:
D:\rawrxd\src\cpu_inference_engine.h:181:29: error: 'BPETokenizer' is not a member of 'RawrXD'; did you mean 'BPETokenizer'?
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;
      |                             ^~~~~~~~~~~~
In file included from D:\rawrxd\src\cpu_inference_engine.h:10:
D:\rawrxd\src\engine/bpe_tokenizer.h:7:7: note: 'BPETokenizer' declared here
    7 | class BPETokenizer {
      |       ^~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:181:41: error: template argument 1 is invalid
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;
      |                                         ^
D:\rawrxd\src\cpu_inference_engine.h:181:41: error: template argument 2 is invalid
D:\rawrxd\src\cpu_inference_engine.h:181:10: error: '<expression error>' in namespace 'std' does not name a type
  181 |     std::unique_ptr<RawrXD::BPETokenizer> m_tokenizer;
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:186:26: error: redeclaration of 'std::vector<CPUInference::KVCache> CPUInference::CPUInferenceEngine::m_kv_cache'
  186 |     std::vector<KVCache> m_kv_cache;  std::vector<float*> m_memoryPool;
      |                          ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:174:26: note: previous declaration 'std::vector<CPUInference::KVCache> CPUInference::CPUInferenceEngine::m_kv_cache'
  174 |     std::vector<KVCache> m_kv_cache;
      |                          ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:202:1: error: expected declaration before '}' token
  202 | } // namespace CPUInference
      | ^
D:\rawrxd\src\cpu_inference_engine.h: In constructor 'CPUInference::CPUInferenceEngine::CPUInferenceEngine()':
D:\rawrxd\src\cpu_inference_engine.h:168:9: warning: 'CPUInference::CPUInferenceEngine::m_numHeads' will be initialized after [-Wreorder]
  168 |     int m_numHeads = 0;
      |         ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:166:9: warning:   'int CPUInference::CPUInferenceEngine::m_embeddingDim' [-Wreorder]
  166 |     int m_embeddingDim = 0;
      |         ^~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:35:1: warning:   when initialized here [-Wreorder]
   35 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:169:9: warning: 'CPUInference::CPUInferenceEngine::m_vocabSize' will be initialized after [-Wreorder]
  169 |     int m_vocabSize = 0;
      |         ^~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:157:9: warning:   'int CPUInference::CPUInferenceEngine::m_threadCount' [-Wreorder]
  157 |     int m_threadCount = 1;
      |         ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:35:1: warning:   when initialized here [-Wreorder]
   35 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:157:9: warning: 'CPUInference::CPUInferenceEngine::m_threadCount' will be initialized after [-Wreorder]
  157 |     int m_threadCount = 1;
      |         ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:155:10: warning:   'bool CPUInference::CPUInferenceEngine::m_modelLoaded' [-Wreorder]
  155 |     bool m_modelLoaded = false;
      |          ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:35:1: warning:   when initialized here [-Wreorder]
   35 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp: In member function 'bool CPUInference::CPUInferenceEngine::LoadModel(const std::string&)':
D:\rawrxd\src\cpu_inference_engine_real.cpp:66:5: error: 'm_weight_store' was not declared in this scope; did you mean 'm_weights'?
   66 |     m_weight_store.clear();
      |     ^~~~~~~~~~~~~~
      |     m_weights
D:\rawrxd\src\cpu_inference_engine_real.cpp:69:5: error: 'm_tok_embeddings' was not declared in this scope
   69 |     m_tok_embeddings = (float*)LoadTensorData(m_loader.get(), m_weight_store, "token_embd.weight");
      |     ^~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:70:5: error: 'm_output_norm' was not declared in this scope
   70 |     m_output_norm = (float*)LoadTensorData(m_loader.get(), m_weight_store, "output_norm.weight");
      |     ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:71:5: error: 'm_output_weight_ptr' was not declared in this scope; did you mean 'm_outputWeights'?
   71 |     m_output_weight_ptr = LoadTensorData(m_loader.get(), m_weight_store, "output.weight");
      |     ^~~~~~~~~~~~~~~~~~~
      |     m_outputWeights
D:\rawrxd\src\cpu_inference_engine_real.cpp: In member function 'std::vector<float> CPUInference::CPUInferenceEngine::Eval(const std::vector<int>&)':
D:\rawrxd\src\cpu_inference_engine_real.cpp:203:9: error: 'm_tok_embeddings' was not declared in this scope
  203 |     if (m_tok_embeddings) {
      |         ^~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:225:9: error: 'm_output_norm' was not declared in this scope
  225 |     if (m_output_norm) {
      |         ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:232:9: error: 'm_output_weight_ptr' was not declared in this scope; did you mean 'm_outputWeights'?
  232 |     if (m_output_weight_ptr) {
      |         ^~~~~~~~~~~~~~~~~~~
      |         m_outputWeights
D:\rawrxd\src\cpu_inference_engine_real.cpp:198:9: warning: unused variable 'pos' [-Wunused-variable]
  198 |     int pos = m_currentPos;
      |         ^~~
D:\rawrxd\src\cpu_inference_engine_real.cpp: In member function 'size_t CPUInference::CPUInferenceEngine::GetMemoryUsage() const':
D:\rawrxd\src\cpu_inference_engine_real.cpp:307:27: error: 'm_weight_store' was not declared in this scope; did you mean 'm_weights'?
  307 |     for (const auto& kv : m_weight_store) total += kv.second.size();
      |                           ^~~~~~~~~~~~~~
      |                           m_weights
D:\rawrxd\src\cpu_inference_engine_real.cpp: At global scope:
D:\rawrxd\src\cpu_inference_engine_real.cpp:353:6: error: no declaration matches 'void CPUInference::CPUInferenceEngine::MultiHeadAttention(const float*, const float*, const float*, float*, int, int, int, int)'
  353 | void CPUInferenceEngine::MultiHeadAttention(const float* Q, const float* K, const float* V, float* output, int seq_len, int head_dim, int num_heads, int layer_idx) {
      |      ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:135:10: note: candidate is: 'void CPUInference::CPUInferenceEngine::MultiHeadAttention(const float*, const float*, const float*, float*, int, int)'
  135 |     void MultiHeadAttention(const float* Q, const float* K, const float* V, float* output, int num_heads, int layer_idx);
      |          ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:74:7: note: 'class CPUInference::CPUInferenceEngine' defined here
   74 | class CPUInferenceEngine {
      |       ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:358:6: error: no declaration matches 'void CPUInference::CPUInferenceEngine::TransformerLayerMain(const float*, float*, int, int)'
  358 | void CPUInferenceEngine::TransformerLayerMain(const float* input, float* output, int layer_idx, int seq_len) {}
      |      ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:358:6: note: no functions named 'void CPUInference::CPUInferenceEngine::TransformerLayerMain(const float*, float*, int, int)'
D:\rawrxd\src\cpu_inference_engine.h:74:7: note: 'class CPUInference::CPUInferenceEngine' defined here
   74 | class CPUInferenceEngine {
      |       ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine_real.cpp:16:17: warning: 'uint8_t* CPUInference::LoadTensorData(StreamingGGUFLoader*, std::map<std::__cxx11::basic_string<char>, std::vector<unsigned char> >&, const std::string&)' defined but not used [-Wunused-function]
   16 | static uint8_t* LoadTensorData(StreamingGGUFLoader* loader, std::map<std::string, std::vector<uint8_t>>& store, const std::string& name) {
      |                 ^~~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\RawrEngine.dir\build.make:169: CMakeFiles/RawrEngine.dir/src/cpu_inference_engine_real.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:89: CMakeFiles/RawrEngine.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
